deployment/resources/ping.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  namespace: ping
spec:
  selector:
    matchLabels:
      app: ping
  replicas: 1
  template:
    metadata:
      labels:
        app: ping
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: ping
      containers:
        - name: ping
          image: melisaghashicorp/pingpong:test-8
#          image: rboyer/pingpong
          ports:
            - containerPort: 8080
          args:
          - -bind
          - ":8080"
          - -dial
          - "pong.pong:8080"
          - -name
          - ping
          - -pong-chaos
          - -dialfreq
          - 5s
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: ping
  namespace: ping
spec:
  type: ClusterIP
  selector:
    app: ping
  ports:
    - port: 8080
